[gd_scene load_steps=4 format=3 uid="uid://cebncnrq2pkvm"]

[ext_resource type="Script" uid="uid://0vuav2bj1lq6" path="res://Abilities/BossMoves/StageMaster/Shockwave.gd" id="1_k6nk5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_h2452"]
radius = 1.0

[sub_resource type="CircleShape2D" id="CircleShape2D_k6nk5"]
radius = 0.5

[node name="Shockwave" type="Area2D"]
script = ExtResource("1_k6nk5")
EXPAND_SPEED = 100.0
SHOCKWAVE_WIDTH = 2.0

[node name="DamageShape" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_h2452")

[node name="SafeShape" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_k6nk5")
debug_color = Color(0.816212, 0.311532, 0.667626, 0.42)

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
amount = 500
lifetime = 0.3

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
